common/common.scss
//tiles styling  specific styling
.tiles-style {

  .tiles-grid {
    display:block;
    .topic-list-item-separator {
      display: none;
    }
    display: grid;
    grid-gap: 6px;
    grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
    grid-auto-rows: 20px;
  }

  .tiles-grid-item-width2 {
    box-sizing: border-box;
    cursor: pointer;
    border-radius: 3px;
    grid-column-end: span 2;
  }

  .tiles-grid-item {
    box-sizing: border-box;
    cursor: pointer;
    border-radius: 3px;
  }

  .tiles-grid-item-content {
    padding: 10px;
    display: grid;
    grid-template-columns: 1 1 1 1 auto;
    grid-template-rows: auto auto auto auto auto;
    grid-template-areas:
     "theader theader theader theader theader"
     "photo photo photo photo photo"
     "details details details details details"
     "tags tags tags tags tags"
     "meta meta meta meta actions"
  }

  .tiles-grid-item:hover {
    background-color: darken($secondary, 2%);
    lighten: ($primary, 70%);
  }

  .tiles-grid-item:active {
  }

  .topic-header-grid {
    grid-area: theader;
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    grid-template-areas:
    "title posters"
    "category posters"
  }

  .show-more.has-topics {
     position: relative;
  }

  .topic-title {
    font-size: 1.143em;
    grid-area: title;
    padding: 0 0 0 0;

     .link-top-line {
       flex: 1 1 auto;
     }

    a.title {
      color: $primary;
    }

    a.topic-featured-link {
      display: block;
      padding-left: 0;
      padding-top: 3px;
    }

    .badge-notification.new-topic {
      vertical-align: top;
      display: inline-block;
    }
  }

  .topic-users {
    grid-area: posters;
    padding: 0 0 5px 5px;

    .inline {
      float: right;
      line-height: 24px;
      text-align: right;

      .avatar {
        padding: 0 0 0 0px;
        margin-right: -2px;
        width: 22px;
        height: 22px;
      }
    }
  }

  .topic-statuses {
    float: right;
  }

  .topic-category{
    grid-area: category;
    padding: 0 0 4px 0;
  }

  .topic-thumbnail{
    grid-area: photo;
    padding: 0 0 4px 0;
  }

  .thumbnail {
    .no-thumbnail {
      display: none;
    }
  }

  .topic-details {
    grid-area: details;
    padding: 0 0 4px 0;

    .topic-excerpt {
      line-height: 1.3;
      max-height: 300px;
      max-width: 100%;
      float: left;
      clear: both;
      
      overflow-wrap: break-word;
      word-wrap: break-word;

      -ms-word-break: break-all;
      word-break: break-all;
      word-break: break-word;

      -ms-hyphens: auto;
      -moz-hyphens: auto;
      -webkit-hyphens: auto;
      hyphens: auto;
    }
  }

  .topic-tags {
    grid-area: tags;

    .discourse-tags {
        display: inline-block;
    }
  }

  .topic-meta{
    grid-area: meta;

    .topic-views {
      color: $primary-medium;
    }

    .topic-replies span {
      padding-left: 3px;
    }
  }

  .topic-poster-names a {
    font-size: 0.9em;
  }

  div.sub, span.sub {
    padding: 0;
    font-size: 12px;
  }

  .topic-list{
    padding-top: 10px;
  }

  .list-tags {
    padding-right: 10px;
  }

  a.topic-featured-link {
    display: inline-block;
    padding-left: 0;
    padding-top: 3px;
  }

  .topic-meta {
    float: left;
  }

  .topic-actions {
    grid-area: actions;
    float: right;
    justify-content: flex-end;
    text-align: right;
    vertical-align: bottom;
  }
}

.topic-thumbnail {
  float: left;
  padding-right: 15px;

  .no-thumbnail {
    display: none;
  }
}

.topic-list .main-link a.title {
  padding: 0;
}

.actions-and-meta-data {
  float: left;
  margin-top: 5px;
}

img.thumbnail {
  object-fit: cover;
}

.middot:after {
  content: '\00B7';
}

.topic-list span.badge-category .category-name {
    max-width: 250px;
}

.main-link .topic-category {
  display: inline-block;
  clear: left;
}

html:not(.tile-style) .topic-actions {
  float: left;
  clear: both;
  display: flex;
  align-items: center;
}

.like-count, .list-vote-count {
  color: dark-light-choose(scale-color($primary, $lightness: 60%), scale-color($secondary, $lightness: 40%));
  font-size: 13px;
  display: inline-block;
  vertical-align: bottom;
  margin-right: 7px;

  .vote-count {
    height: initial;
    line-height: initial;
    font-weight: initial;
  }
}

.list-vote-count {
  float: left;
  padding-right: 3px;
  margin-top: 5px;
}

.topic-actions .list-vote-count {
  float: none;
  margin-top: 0;
}

button.list-button {
  font-size: 0.9em;
  background: transparent;
  border: none;
  padding: 2px 4px;
  overflow: hidden;

  &:first-of-type {
    padding-left: 0;
  }

  i {
    vertical-align: bottom;
  }

  &.has-like, &.topic-like:not([disabled]):hover {
    color: $love;
  }

  &.has-like[disabled]:hover {
    background: transparent;
  }

  &.has-like[disabled]:active {
    box-shadow: none;
  }

  &.bookmarked, &.topic-bookmark:hover {
    i.fa-bookmark, .d-icon-bookmark {
      color: $tertiary;
    }
  }
}

.user-main .list-button {
  .fa-heart, .d-icon-heart {
    color: inherit !important;
  }

  &.has-like {
    .fa-heart, .d-icon-heart {
      color: $love !important;
    }
  }
}

.category-custom-settings-outlet {
  .select2-container {
    width: 100%
  }

  .input-small {
    width: 60px;
  }
}

.tlp-featured-topics.has-topics {
  display: inline-block;
  width: 100%;

  .topics {

    display: inline-flex;
    width:1100px;
    overflow-x: scroll;
    column-gap: 5px;
    grid-row-gap: 5px;

    .tlp-featured-topic {

      display:block;
      cursor: pointer;

     .featured-details {
       position: relative;

       img.thumbnail {
         z-index:0;
         height:150px;
       }

      .content, .content a {
        z-index:-2;
        color: transparent;
        background-color: transparent;
        transition: background-color 200ms linear;
        transition: color 200ms linear;
        padding-bottom: 15px;
        padding: 15px;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;

        .title {
          font-weight: 700;
          margin-bottom: 7px;
        }

        .user {
          position: absolute;
          bottom: 10px;
          right: 10px;
        }

        img {
          margin-left: 5px;
          max-height:100%;
          max-width:100%;
        }
      }
    }

    &.show-details .featured-details {

      img {
        -webkit-filter: brightness(50%);
        transition: background-color 200ms linear;
      }

      .content, .content a {

        z-index: 2;
        color: $secondary;

        a.mention {
          background-color: $primary-high;
        }

        img {
          -webkit-filter: brightness(150%);
          visibility: visible;
        }
      }
    }
  }
}


  .featured-tags {
    margin-top: 10px;
    padding-right: 10px;
    float: right;
  }
}

// formats for thumbnail selector functionality
div.select-thumbnail-connector {
  padding: 0 0 10px 0;
}

img.select-thumbnail-options {
  width: 80px;
  height: 80px;
  padding: 1px;
  box-shadow: 2px 2px 2px 2px #888888;
  cursor: pointer;
}

img.select-thumbnail-options:hover {
  filter: brightness(120%);
}

img.select-thumbnail-options:active {
  -webkit-transform: translateY(+2px);
  -ms-transform: translateY(+2px);
  transform: translateY(+2px);
  -webkit-transform: translateX(+2px);
  -ms-transform: translateX(+2px);
  transform: translateX(+2px);
  box-shadow: 1px 1px 1px 1px #888888;
}

img.select-thumbnail-preview {
  border: solid 1px $primary-medium;
  margin: 5px 0px 5px 0px;
  padding: 5px;
  width: 148px;
  max-height: 148px;
}

.portfolio-button-inner{
  width:100px;
  padding: 6px;
  overflow: hidden;
  font-size: 1em;
  height: 18px;
  min-width: 100px;
  vertical-align: middle;
  justify-content: center;
  white-space: nowrap;
  margin-left: 2px;
  display: inline-flex;
  cursor: pointer;
  
  background-color: $tertiary;

  label {
    color: $secondary;
    display: inline-block;
    cursor: pointer;
  }
  svg {
    color: $secondary;
    display: inline-block;
  }

  &:hover {
    background-color: darken($tertiary, 5%);
  }
}

.tiles-grid-item {
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 0 0 0 rgba(0,0,0,0.12);
}

.tiles-grid-item:hover {
  background-color: darken($secondary, 3%);
  lighten: ($primary, 70%);
}

.tiles-grid-item:active {
-webkit-transform: translateY(+2px);
-ms-transform: translateY(+2px);
transform: translateY(+2px);
-webkit-transform: translateX(+2px);
-ms-transform: translateX(+2px);
transform: translateX(+2px);
box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16),0 0 0 0 rgba(0,0,0,0.12);
}

//hide topic actions whilst there is no serializer support

.topic-actions {
  display: none !important;
}

